@@ -1,5 +1,11 @@
 2006-04-08  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extractor.c:
+	Don't set the encoder tags, set the duration, and cleanup error
+	handling.
+
+2006-04-08  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-metadata-musicbrainz.c:
 	Don't set sortname to incorrect data (Peter Oliver)
 
